--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -90,9 +90,10 @@
 </head>
 
 <body>
+    <img src="306881.jpg" alt="" class="w-100" style="filter: blur(14px);">
 
     <div class="main">
-        <form action="/auth" method="POST">
+        <form action="/login" method="POST">
             <p class="h4 text-center mb-4 mt-5">Sign in</p>
             <label for="defaultFormLoginEmailEx" class="grey-text">Username</label>
             <input type="username" name="username" id="defaultFormLoginEmailEx" class="form-control" placeholder="Enter Username" / required>
@@ -100,15 +101,38 @@
             <label for="defaultFormLoginPasswordEx" class="grey-text">Password</label>
             <input type="password" name="password" id="defaultFormLoginPasswordEx" class="form-control" placeholder="Enter Password" / required> 
             <div class="text-center mt-4">
-                    <button class="btn btn-dark"> Login </button>
+                    <button id="submit" class="btn btn-dark"> Login </button>
             </div>
-
         </form>
-
+        <div id="line" class="collapse">
+            <hr> 
+        </div>
+        
+        <div class="w-100 alert alert-danger alert-dismissible collapse" id="myAlert" role="alert">
+            <strong>Error404 : </strong> Login error
+                <button type="button" class="close" id="btnSubmit" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+        </div>
     </div>
 
+   
+    
+    
+    
 
 
 </body>
-
+    <script src="/jquery/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {   
+            $('#line').show('fade')
+            $('#myAlert').show('fade')
+            $('#btnSubmit').click(function (){
+                $('#line').hide('fade')
+                $('#myAlert').hide('fade')
+            })
+        })
+        
+</script>
 </html>
