--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -176,9 +176,12 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
+                           
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Welcome back </span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empName"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empRole"></span>
                                 <img class="img-profile rounded-circle"
                                     src="/img/profile.jpg">
                             </a>
@@ -378,7 +381,23 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/fontawesome/js/all.js"></script>
     <script src="/js/navbar.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $.ajax({
+                url : 'fetchDetails',
+                type : 'GET',
+                dataType : 'json',
+                success : (data) =>{
+                    name = data[0].firstName + " " + data[0].lastName
+                    role = data[0].jobTitle
+                    $('#empName').html(name)
+                    $('#empRole').html(role)
+                } 
 
+            })
+        })
+    
+    </script>
     <!-- Menu Toggle Script -->
     <script>
         $("#menu-toggle").click(function (e) {
