--- a/views/pages/catalog/catalog.ejs
+++ b/views/pages/catalog/catalog.ejs
@@ -17,62 +17,10 @@
    <link href="/css/simple-sidebar.css" rel="stylesheet">
 
    <link rel="stylesheet" href="/fontawesome/css/all.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+   
 
 
 
-<script type="text/javascript">
-
-    
-    $(document).ready(() => {
-        $.ajax({
-          url: 'scaleFilter',
-          type: 'GET',
-          dataType : 'json',
-          success: (data) => {var text;
-                   text = "";
-                   
-            $.each(data, function(index, obj) {
-                  
-                    text+='<label class="container">'
-                     text+='<input type="checkbox" checked="checked">'
-                     text+='<span class="checkmark"></span>'
-                     text+=obj.productScale
-                        text+='</label>'
-                  });
-                   $('#scalefilter').html( text);
-
-            },
-        });
-
-        $.ajax({
-          url: 'vendorFilter',
-          type: 'GET',
-          dataType : 'json',
-          success: (data) => {
-                   var text;
-                   text = "";
-                   
-            $.each(data, function(index, obj) {
-                  
-                    text+='<label class="container">'
-                     text+='<input type="checkbox" checked="checked">'
-                     text+='<span class="checkmark"></span>'
-                     text+=obj.productVendor
-                        text+='</label>'
-                  });
-                   $('#vendorfilter').html( text);
-
-            },
-        });
-       
-      });
-    
-      $(document).ajaxError(() => {
-        $('#demo').html('Error: unknown ajaxError!');
-      });
- 
-    </script>
 
 </head>
 
@@ -158,17 +106,25 @@
             <div class="container mt-5">
 
                <div class="row">
+                 
+                  <div class="col-lg-3 mt-3" style="padding-top: 121px;">            
+                     <form action="/catalog" method="GET">
+                        Scale <br>
+                        <select class='form-control' name="scale" id="scalefilter">
+                           <option value='All'>All</option>
+                        </select>
+                        <br>
+                        
+                      
+                        Vendor <br>
+                        <select class='form-control w-75 h-50' name="vendor" id="vendorfilter">
+                           <option value='All'>All</option>
+                        </select>
+                        <br>
+                        <input class="btn btn-primary" type="submit" value="Search">
+                      </form>
 
-                  <div class="col-lg-3 mt-3" style="padding-top: 21px;">
                      
-                     <div class="list-group mt-5">
-                        <h5 class="</label>">Scale</h5>
-                        <div class="list-group-item" id="scalefilter"></div>
-                        <div class="list-group mt-5"></div>
-                        <h5 class="list-group-item">Verdor</h5>
-                        <div class="list-group-item" id="vendorfilter"></div>
-
-                     </div>
 
                   </div>
                   <!-- /.col-lg-3 -->
@@ -206,10 +162,7 @@
                      </div>
 
                      <div class="row">
-                           <script>
-                                 var row =<%-JSON.stringify(result)%>
-                                 console.log(row);
-                             </script>
+                           
                          <% for(var i=0; i < result.length; i++) { %>
                            <div class="col-lg-4 col-md-6 mb-4" id='<%= result[i].productName %>'>
                               <div class="card h-100">
@@ -246,6 +199,7 @@
       </div>
    </div>
 
+   
    <!-- Bootstrap core JavaScript -->
    <script src="/jquery/jquery.min.js"></script>
    <script src="/js/bootstrap.bundle.min.js"></script>
@@ -259,6 +213,64 @@
          $("#wrapper").toggleClass("toggled");
       });
 
+
+   </script>
+
+<script type="text/javascript">
+  
+    
+   $(document).ready(() => {
+       $.ajax({
+         url: 'scaleFilter',
+         type: 'GET',
+         dataType : 'json',
+         success: (data) => {var text;
+                  text = "";
+                  
+           $.each(data, function(index, obj) {
+                 
+                 /*  text+='<label class="container">'
+                    text+='<input type="checkbox" checked="checked">'
+                    text+='<span class="checkmark"></span>'
+                    text+=obj.productScale
+                       text+='</label>'*/
+
+                      // text+='<option value="'+obj.productScale+'">"'+obj.productScale+'"</option>'
+                      $("#scalefilter").append("<option value='"+ obj.productScale + "'>" + obj.productScale + "</option>");
+                 });
+                  //$('#scalefilter').html( text);
+
+           },
+       });
+
+       $.ajax({
+         url: 'vendorFilter',
+         type: 'GET',
+         dataType : 'json',
+         success: (data) => {
+                  var text;
+                  text = "";
+                  
+           $.each(data, function(index, obj) {
+                 
+                  /* text+='<label class="container">'
+                    text+='<input type="checkbox" checked="checked">'
+                    text+='<span class="checkmark"></span>'
+                    text+=obj.productVendor
+                       text+='</label>'*/
+                      // text+="<option value='"+obj.productVendor+"'>'"+obj.productVendor+"'</option>"
+                      $("#vendorfilter").append("<option  value='"+ obj.productVendor + "'>" + obj.productVendor + "</option>");
+                 });
+                  //$('#vendorfilter').html( text);
+
+           },
+       });
+      
+     });
+   
+     $(document).ajaxError(() => {
+       $('#demo').html('Error: unknown ajaxError!');
+     });
 
    </script>
 
