--- a/views/pages/catalog/catalog.ejs
+++ b/views/pages/catalog/catalog.ejs
@@ -125,7 +125,7 @@
                   <div class="col-lg-3 mt-3" style="padding-top: 121px;">
                      <form action="/catalog" method="GET" name=Form1>
                         Scale <br>
-                        <select class='form-control' name="scale" id="scalefilter">
+                        <select class='form-control w-75 h-50' name="scale" id="scalefilter">
                         </select>
                         <br>Vendor <br>
                         <select class='form-control w-75 h-50' name="vendor" id="vendorfilter">
@@ -140,9 +140,9 @@
                      
                   </div>
 
-
+                     
                   <div class="col-lg-9 mt-3">
-
+                   
                      <div id="carouselExampleIndicators" class="carousel slide mb-4" data-ride="carousel">
                         <ol class="carousel-indicators">
                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
