--- a/views/pages/customer.ejs
+++ b/views/pages/customer.ejs
@@ -18,6 +18,34 @@
 
     <link rel="stylesheet" href="/fontawesome/css/all.css">
 
+    <SCRIPT language="javascript">
+		function deleteRow(tableID) {
+			try {
+			var table = document.getElementById(tableID);
+			var rowCount = table.rows.length;
+
+			for(var i=0; i<rowCount; i++) {
+				var row = table.rows[i];
+				var chkbox = row.cells[0].childNodes[0];
+				if(null != chkbox && true == chkbox.checked) {
+					if(rowCount <= 1) {
+						alert("Cannot delete all the rows.");
+						break;
+					}
+					table.deleteRow(i);
+					rowCount--;
+					i--;
+				}
+
+
+			}
+			}catch(e) {
+				alert(e);
+			}
+		}
+
+	</SCRIPT>
+
 </head>
 
 <body class="sfmono">
@@ -215,19 +243,23 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Customer List</h1>
+                        
                     </div>
 
                     <!-- Content Row -->
 
-                    <table class="table">
+                    <table class="table table-hover">
                         <thead>
                             <tr>
                                 <th>CustomerID</th>
                                 <th>Name</th>
                                 <th>Address</th>
+                                <th>Manage</th>
                             </tr>
                         </thead>
-                        <tbody id="customerData"></tbody>
+                        <tbody id="customerData">
+                           
+                        </tbody>
                     </table>
 
                 </div>
@@ -277,6 +309,7 @@
                            text += '<td>' + obj.customerNumber+ '</td>'
                            text += '<td>' + obj.customerName+ '</td>'
                            text += '<td>' + obj.addressLine1+ '</td>'
+                           text += '<td><INPUT type="button" value="Delete" onclick="" /> <INPUT type="button" value="Edit" onclick="" /></td>'
                            text += '</tr>'
                        })
                     $('#customerData').html(text)
@@ -284,7 +317,6 @@
             })
           
         });
-
         $(document).ajaxError(() => {
             $('#demo').html('Error: unknown ajaxError!');
         });
