--- a/views/pages/preorder.ejs
+++ b/views/pages/preorder.ejs
@@ -178,9 +178,10 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                                <img class="img-profile rounded-circle"
-                                    src="/img/profile.jpg">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Welcome back </span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empName"></span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empRole"></span>
+                                <img class="img-profile rounded-circle" src="/img/profile.jpg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -219,8 +220,8 @@
                     </div>
 
                     <!-- Content Row -->
-                    
-                </div>  
+
+                </div>
             </div>
 
             <!-- Footer -->
@@ -250,8 +251,23 @@
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
+    </script>
 
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $.ajax({
+                url: 'fetchDetails',
+                type: 'GET',
+                dataType: 'json',
+                success: (data) => {
+                    name = data[0].firstName + " " + data[0].lastName
+                    role = data[0].jobTitle
+                    $('#empName').html(name)
+                    $('#empRole').html(role)
+                }
 
+            })
+        })
     </script>
 
 
