profile pic update to pm pic

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -183,7 +183,7 @@
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empName"></span>
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empRole"></span>
                                 <img class="img-profile rounded-circle"
-                                    src="/img/profile.jpg">
+                                    src="/img/pm.jpg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
