--- a/views/pages/catalog/catalog.ejs
+++ b/views/pages/catalog/catalog.ejs
@@ -44,19 +44,25 @@
                      </div>
                      <div class="sidebar-brand-text">Classsic Model<sup>Shop</sup></div>
                   </a>
+                  <div class="align-item-center container-fluid justify-content-center">
+                     <center>
+                        <form
+                           class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                           <div class="input-group">
+                              <input type="text" class="form-control bg-light border-0 small"
+                                 placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                              <div class="input-group-append">
+                                 <button class="btn btn-primary" type="button">
+                                    <i class="fas fa-search fa-sm"></i>
+                                 </button>
+                              </div>
+                           </div>
+                        </form>
+                     </center>
 
+                  </div>
                   <!-- Topbar Search -->
-                  <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                           aria-label="Search" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                           <button class="btn btn-primary" type="button">
-                              <i class="fas fa-search fa-sm"></i>
-                           </button>
-                        </div>
-                     </div>
-                  </form>
+
 
                   <!-- Topbar Navbar -->
                   <ul class="navbar-nav ml-auto">
@@ -85,24 +91,15 @@
                      </li>
                      <div class="topbar-divider d-none d-sm-block"></div>
 
-                     <ul class="nav-item mt-2" style="list-style-type: none;">
-                        <li>
-                           <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empName"></span>
-                        </li>
-                        <li>
-                           <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="empRole"></span>
-                        </li>
-                     </ul>
-
-
-
-                     <li class="nav-item dropdown no-arrow">
-                        <a class="sidebar-brand  align-items-center justify-content-between text-decoration-none"
-                           href="/login">
+                     <div>
+                        <a class="sidebar-brand d-flex justify-content-center" href="/login">
                            <div class="sidebar-brand-icon ">
                               <i class="fas fa-sign-in-alt"></i>
                            </div>
                            <div class="sidebar-brand-text">Sign in</div>
+                     </div>
+                     <li class="nav-item dropdown no-arrow accordion" id="accordionSidebar">
+                        
                         </a>
                      </li>
 
@@ -119,14 +116,18 @@
                      <div class="card mb-4 border-bottom-primary">
                         <div class="card-body ">
                            <form action="/catalog" method="GET">
-                              <p><h5>Scale</h5></p>
+                              <p>
+                                 <h5>Scale</h5>
+                              </p>
                               <select class='form-control' name="scale" id="scalefilter">
 
                               </select>
                               <br>
 
 
-                              <p><h5>Vendor</h5></p>
+                              <p>
+                                 <h5>Vendor</h5>
+                              </p>
                               <select class='form-control' name="vendor" id="vendorfilter">
 
                               </select>
