--- a/views/pages/catalog/catalog.ejs
+++ b/views/pages/catalog/catalog.ejs
@@ -120,7 +120,7 @@
                               <select class='form-control mt-2 mb-3' name="scale" id="scalefilter">
                               </select>
                                  Vendor
-                              <select class='form-control w-75 h-50 mt-2 mb-3' name="vendor" id="vendorfilter">
+                              <select class='form-control mt-2 mb-3' name="vendor" id="vendorfilter">
                               </select>
 
                               <input class="btn btn-primary" type="submit" value="Search" onclick="" id="submitfilter">
@@ -141,7 +141,7 @@
                   </div>
 
 
-                  <div class="col-lg-9 mt-3">
+                  <div class="col-lg-9 mt-5">
 
                      <div id="carouselExampleIndicators" class="carousel slide mb-4" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -151,13 +151,13 @@
                         </ol>
                         <div class="carousel-inner" role="listbox">
                            <div class="carousel-item active">
-                              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                              <img class="d-block img-fluid" src="/img/ad01.jpg" alt="First slide">
                            </div>
                            <div class="carousel-item">
-                              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                              <img class="d-block img-fluid" src="/img/ad02.jpg" alt="Second slide">
                            </div>
                            <div class="carousel-item">
-                              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                              <img class="d-block img-fluid" src="/img/ad03.jpg" alt="Third slide">
                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
